# sync-file-server

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
backend/: BUILD.bazel  backend.go
grpc/client/: BUILD.bazel  client.go
grpc/server/: BUILD.bazel  repo.go  server.go  sync_file.go
models/: BUILD.bazel  pool.go  sync_file.go  sync_repo_file.go
proto/: repo.proto  sync_file.proto
protocol/: BUILD.bazel  repo.pb.go  repo_grpc.pb.go  sync_file.pb.go  sync_file_grpc.pb.go
repo-file-cache/: BUILD.bazel  cache.go
server/: BUILD.bazel  Dockerfile  backend.go  config.go  main.go
server/gitee/: BUILD.bazel  gitee.go
