load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "pool.go",
        "sync_file.go",
        "sync_repo_file.go",
    ],
    importpath = "github.com/opensourceways/sync-file-server/models",
    visibility = ["//visibility:public"],
    deps = [
        "//backend:go_default_library",
        "@com_github_panjf2000_ants_v2//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
