load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cache.go"],
    importpath = "github.com/opensourceways/sync-file-server/repo-file-cache",
    visibility = ["//visibility:public"],
    deps = [
        "//backend:go_default_library",
        "@com_github_opensourceways_repo_file_cache//models:go_default_library",
    ],
)
