load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "backend.go",
        "main.go",
    ],
    importpath = "github.com/opensourceways/sync-file-server/server",
    visibility = ["//visibility:private"],
    deps = [
        "//backend:go_default_library",
        "//grpc/server:go_default_library",
        "//repo-file-cache:go_default_library",
        "//server/gitee:go_default_library",
        "@com_github_opensourceways_community_robot_lib//logrusutil:go_default_library",
        "@com_github_opensourceways_community_robot_lib//secret:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
