load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "repo.go",
        "server.go",
        "sync_file.go",
    ],
    importpath = "github.com/opensourceways/sync-file-server/grpc/server",
    visibility = ["//visibility:public"],
    deps = [
        "//backend:go_default_library",
        "//models:go_default_library",
        "//protocol:go_default_library",
        "@com_github_opensourceways_robot_gitee_plugin_lib//interrupts:go_default_library",
        "@com_github_panjf2000_ants_v2//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
