load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gitee.go"],
    importpath = "github.com/opensourceways/sync-file-server/server/gitee",
    visibility = ["//visibility:public"],
    deps = [
        "//backend:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_opensourceways_community_robot_lib//giteeclient:go_default_library",
    ],
)
